// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-primitive-resize-handler should render the basic markup correctly 1`] = `
<lightning-primitive-resize-handler>
  #shadow-root(open)
    <input
      aria-label=" column width"
      class="slds-resizable__input slds-assistive-text"
      max="1000"
      min="0"
      type="range"
    />
    <span
      class="slds-resizable__handle"
    >
      <span
        class="slds-resizable__divider"
      />
    </span>
</lightning-primitive-resize-handler>
`;

exports[`lightning-primitive-resize-handler should render the label and range correctly 1`] = `
<lightning-primitive-resize-handler>
  #shadow-root(open)
    <input
      aria-label="test column label column width"
      class="slds-resizable__input slds-assistive-text"
      max="500"
      min="100"
      type="range"
    />
    <span
      class="slds-resizable__handle"
    >
      <span
        class="slds-resizable__divider"
      />
    </span>
</lightning-primitive-resize-handler>
`;
